Bug 1629604 - Fixed phrase not found in visible <script> and added a test for visible <script>. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D75824